--- a/todo
+++ b/todo
@@ -8,7 +8,7 @@ Comments
         (_) Write View
         (_) Alter view template
         (_) Blocking
-        (_) Admin
+        (X) Admin                 Jingyu
         (_) Uploader editing
 Ratings
         (_) Write View
