Create model for rating

--- a/todo
+++ b/todo
@@ -12,7 +12,7 @@ Comments
         (_) Uploader editing
 Ratings
         (_) Write View
-        (_) Create Model
+        (X) Create Model	  Jingyu
         (_) Alter view template
 Videos
         (X) Generate thumbnails		JOHN
