--- a/todo
+++ b/todo
@@ -1,8 +1,8 @@
 Flags
-        (_) Refine Model
-        (_) Write View
-        (_) Alter view template
-        (_) Admin
+        (X) Refine Model        Peter
+        (X) Write View          Peter
+        (_) Alter view template Peter
+        (X) Admin               Peter
 Comments
         (_) Refine Model
         (_) Write View
